--- a/cell c.html
+++ b/cell c.html
@@ -16,7 +16,7 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/cell%20c.jpg">  
+        <img src="images/cell c.jpg">  
           <p>The number on network for data and social networking</p> 
            <h3>CELL C</h3>
           </div>  
