--- a/foodlovers.html
+++ b/foodlovers.html
@@ -16,7 +16,7 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/food%20lovers.jpg">  
+        <img src="images/food lovers.jpg">  
           <p>The fresh store for fruit and vegetable and it is one of the leading shop in south africaS</p> 
            <h3>FOOD LOVERS</h3>
           </div>  
