--- a/levis.html
+++ b/levis.html
@@ -16,7 +16,7 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/levis%20store.jpg">  
+        <img src="images/levis store.jpg">  
           <p>The quality brand for kids,women and mens clothing, it was published in 1986 by sherwin adustice</p> 
            <h3>LEVIS</h3>
           </div>  
