--- a/ocean basket.html
+++ b/ocean basket.html
@@ -16,7 +16,7 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/ocean%20basket.jpg">  
+        <img src="images/ocean basket.jpg">  
           <p>Ocean basket is soth africas favourite sea food restaurant commited to giving you delicious seafood that homeaway from home feeling to remind you of what it is like to sit at the family table</p> 
            <h3>OCEAN BASKET</h3>
           </div>  
