--- a/cell c.html
+++ b/cell c.html
@@ -18,6 +18,7 @@
        <div id="info-box-full">
         <img src="images/cell c.jpg">  
           <p>The number on network for data and social networking</p> 
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
            <h3>CELL C</h3>
           </div>  
           </div>
