--- a/eden tech.html
+++ b/eden tech.html
@@ -19,7 +19,8 @@
         <img src="images/eden%20tech%20logo.jpg">
         <img src="images/eden%20tech.png">
           <p>The shop for quality alliances you can get diffent one at a reasonable price</p> 
-           <h3>EDEN TECH</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>EDEN TECH</h3>
           </div>  
           </div>
       </div>
