--- a/foodlovers.html
+++ b/foodlovers.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/food lovers.jpg">  
           <p>The fresh store for fruit and vegetable and it is one of the leading shop in south africaS</p> 
-           <h3>FOOD LOVERS</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>FOOD LOVERS</h3>
           </div>  
           </div>
       </div>
