--- a/game.html
+++ b/game.html
@@ -19,7 +19,8 @@
         <img src="images/game%20logo.jpg">
         <img src="images/game.jpg">  
           <p>we sell all type of stuff, one of the store you can trust with quality</p> 
-           <h3>GAME</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>GAME</h3>
           </div>  
           </div>
       </div>
