--- a/hp.html
+++ b/hp.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/hp.jpg">  
           <p>we sell quality hp laptop at discount prices</p> 
-           <h3>HP</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>HP</h3>
           </div>  
           </div>
       </div>
