--- a/i store.html
+++ b/i store.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/istore.jpg">  
           <p>you get all you want even i phone brand</p> 
-           <h3>I-STORE</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>I-STORE</h3>
           </div>  
           </div>
       </div>
