--- a/kfc.html
+++ b/kfc.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/kfc.jpg">  
           <p>We got more than 500 thousand shops nation wide, you can always rely on us </p> 
-           <h3>KFC</h3>
+          <p>TRADING HOURS 09:00am Open until 22:00pm</p> 
+          <h3>KFC</h3>
           </div>  
           </div>
       </div>
