--- a/macdonald.html
+++ b/macdonald.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/macdonald.jpg">  
           <p>we sell burgers, we manufature nation wide</p> 
-           <h3>MACDONAD</h3>
+          <p>TRADING HOURS 09:00am Open until 21:00pm</p> 
+          <h3>MACDONAD</h3>
           </div>  
           </div>
       </div>
