--- a/mugg&bean.html
+++ b/mugg&bean.html
@@ -19,6 +19,7 @@
         <img src="images/mugg&bean.jpg">  
           <p>good coffee restaurant</p> 
            <h3>MUGG & BEAN</h3>
+           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           </div>  
           </div>
       </div>
