--- a/ocean basket.html
+++ b/ocean basket.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/ocean basket.jpg">  
           <p>Ocean basket is soth africas favourite sea food restaurant commited to giving you delicious seafood that homeaway from home feeling to remind you of what it is like to sit at the family table</p> 
-           <h3>OCEAN BASKET</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p>
+          <h3>OCEAN BASKET</h3>
           </div>  
           </div>
       </div>
