--- a/pick n pay.html
+++ b/pick n pay.html
@@ -19,6 +19,7 @@
         <img src="images/pnp logo.jpg">
         <img src="images/pick n pay.jpg">   
            <p>Pick 'n Pay Stores Ltd. is South Africa's leading food, clothing, and general merchandise retailer. The Cape Town-based company has long been a champion of "consumer sovereignty," focusing primarily on the discount retail market. Pick 'n Pay operates through a number of retail formats, including 14 Pick 'n Pay hypermarkets and 106 Pick 'n Pay supermarkets. The company also operates the Pick 'n Pay Pantry convenience store format, as well as franchise grocery operation</p>
+           <p>TRADING HOURS 09:00am Open until 18:00pm</p>
            <h3>PICK N PAY</h3>
           </div>  
           </div>
