--- a/woolworths.html
+++ b/woolworths.html
@@ -19,7 +19,8 @@
         <img src="images/woolworths logo.jpg">
         <img src="images/woolworths.jpg">  
           <p>Woolworths Group, initially known as Woolworths Limited, was founded by five Australian entrepreneurs – Ernest Williams, George Creed, Cecil Scott Waine, Stanley Chatterton, and Percy Christmas – on September 22, 1924. The first store opened by the entrepreneurs in Sydney was known by the name “Woolworths Stupendous Bargain Basement”. At this period of time, the first store only had 29 shareholders who did not have any interest for accelerating the growth of orga</p> 
-           <h3>WOOLWORTHS</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p>
+          <h3>WOOLWORTHS</h3>
           </div>  
           </div>
       </div>
