--- a/adidas.html
+++ b/adidas.html
@@ -17,7 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/adidas.jpg">  
-          <p>The quality brand for kids,women and mens clothing</p> 
+          <p>The quality brand for kids,women and mens clothing</p>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
            <h3>ADIDAS</h3>
           </div>  
           </div>
