--- a/checkers.html
+++ b/checkers.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/checkers.jpg">  
           <p>we sell fresh food and we always make sure that we keep our customers happy</p> 
-           <h3>CHECKERS</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>CHECKERS</h3>
           </div>  
           </div>
       </div>
