--- a/foschini.html
+++ b/foschini.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/foschini.jpg">  
           <p>we are number 40 leading store thsa women in south africa reccomend</p> 
-           <h3>FOSCHINI</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>FOSCHINI</h3>
           </div>  
           </div>
       </div>
