--- a/levis.html
+++ b/levis.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/levis store.jpg">  
           <p>The quality brand for kids,women and mens clothing, it was published in 1986 by sherwin adustice</p> 
-           <h3>LEVIS</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>LEVIS</h3>
           </div>  
           </div>
       </div>
