--- a/markam.html
+++ b/markam.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/makharm.jpg">  
           <p>The quality store for mens clothing</p> 
-           <h3>MARKAM</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>MARKAM</h3>
           </div>  
           </div>
       </div>
