--- a/mtn.html
+++ b/mtn.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/mtn.jpg">  
           <p>mtn is african prenium telecommunications network provider offering best cellphone, internet data bundle etc</p> 
-           <h3>MTN</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p>  
+          <h3>MTN</h3>
           </div>  
           </div>
       </div>
