--- a/nandos.html
+++ b/nandos.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/nandos.jpg">  
           <p>Nandos store has app to call, threy offer flamme grilled chicken </p> 
-           <h3>NANDOS</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
+          <h3>NANDOS</h3>
           </div>  
           </div>
       </div>
