--- a/refinery.html
+++ b/refinery.html
@@ -18,7 +18,8 @@
        <div id="info-box-full">
         <img src="images/refinery.jpg">  
           <p>we are quality campony for quality clothing</p> 
-           <h3>REFINERY</h3>
+          <p>TRADING HOURS 09:00am Open until 18:00pm</p>
+          <h3>REFINERY</h3>
           </div>  
           </div>
       </div>
