--- a/foschini.html
+++ b/foschini.html
@@ -17,6 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/foschini.jpg">  
+        <img src="images/foch1.jpg"> 
+        <img src="images/fosch.jpg"> 
           <p>we are number 40 leading store thsa women in south africa reccomend</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>FOSCHINI</h3>
