--- a/hp.html
+++ b/hp.html
@@ -17,6 +17,7 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/hp.jpg">  
+        <img src="images/hp1.jpg"> 
           <p>we sell quality hp laptop at discount prices</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>HP</h3>
