--- a/i store.html
+++ b/i store.html
@@ -17,6 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/istore.jpg">  
+        <img src="images/iphone2.jpg"> 
+        <img src="images/iphone.jpg"> 
           <p>you get all you want even i phone brand</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>I-STORE</h3>
