--- a/macdonald.html
+++ b/macdonald.html
@@ -17,6 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/macdonald.jpg">  
+        <img src="images/bigmac1.jpg"> 
+        <img src="images/bigmac.jpg"> 
           <p>we sell burgers, we manufature nation wide</p> 
           <p>TRADING HOURS 09:00am Open until 21:00pm</p> 
           <h3>MACDONAD</h3>
