--- a/mtn.html
+++ b/mtn.html
@@ -17,6 +17,7 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/mtn.jpg">  
+        <img src="images/yellow.jpg"> 
           <p>mtn is african prenium telecommunications network provider offering best cellphone, internet data bundle etc</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p>  
           <h3>MTN</h3>
