--- a/mugg&bean.html
+++ b/mugg&bean.html
@@ -16,7 +16,9 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/mugg&bean.jpg">  
+        <img src="images/mugg&bean.jpg"> 
+        <img src="images/mg1.jpg"> 
+        <img src="images/mg2.jpg">  
           <p>good coffee restaurant</p> 
            <h3>MUGG & BEAN</h3>
            <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
