--- a/nandos.html
+++ b/nandos.html
@@ -17,6 +17,7 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/nandos.jpg">  
+        <img src="images/nandosi1.jpg">  
           <p>Nandos store has app to call, threy offer flamme grilled chicken </p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>NANDOS</h3>
