--- a/ocean basket.html
+++ b/ocean basket.html
@@ -16,7 +16,9 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/ocean basket.jpg">  
+        <img src="images/ocean basket.jpg">
+        <img src="images/ocn2.jpg"> 
+        <img src="images/ocn1.jpg">     
           <p>Ocean basket is soth africas favourite sea food restaurant commited to giving you delicious seafood that homeaway from home feeling to remind you of what it is like to sit at the family table</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p>
           <h3>OCEAN BASKET</h3>
