--- a/adidas.html
+++ b/adidas.html
@@ -16,8 +16,10 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/adidas.jpg">  
-          <p>The quality brand for kids,women and mens clothing</p>
+        <img src="images/adidas.jpg"> 
+        <img src="images/ndidaa.jpg"> 
+        <img src="images/dida.jpg"> 
+        <p>The quality brand for kids,women and mens clothing</p>
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
            <h3>ADIDAS</h3>
           </div>  
