--- a/cell c.html
+++ b/cell c.html
@@ -16,7 +16,9 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/cell c.jpg">  
+        <img src="images/cell c.jpg"> 
+        <img src="images/cellccc.jpg">
+        <img src="images/cellcc.jpg"> 
           <p>The number on network for data and social networking</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
            <h3>CELL C</h3>
