--- a/checkers.html
+++ b/checkers.html
@@ -17,6 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/checkers.jpg">  
+        <img src="images/checke.jpg"> 
+        <img src="images/medi.jpg"> 
           <p>we sell fresh food and we always make sure that we keep our customers happy</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>CHECKERS</h3>
