--- a/foodlovers.html
+++ b/foodlovers.html
@@ -17,6 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/food lovers.jpg">  
+        <img src="images/foodl1.jpg"> 
+        <img src="images/foodl2.jpg"> 
           <p>The fresh store for fruit and vegetable and it is one of the leading shop in south africaS</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>FOOD LOVERS</h3>
