--- a/kfc.html
+++ b/kfc.html
@@ -17,6 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/kfc.jpg">  
+        <img src="images/kfc1.jpg">
+        <img src="images/kf2.jpg">  
           <p>We got more than 500 thousand shops nation wide, you can always rely on us </p> 
           <p>TRADING HOURS 09:00am Open until 22:00pm</p> 
           <h3>KFC</h3>
