--- a/levis.html
+++ b/levis.html
@@ -16,7 +16,9 @@
       <div id="main">
       <div id="content">
        <div id="info-box-full">
-        <img src="images/levis store.jpg">  
+        <img src="images/levis store.jpg">
+        <img src="images/lvs1.jpg">  
+        <img src="images/lvs.jpg">  
           <p>The quality brand for kids,women and mens clothing, it was published in 1986 by sherwin adustice</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>LEVIS</h3>
