--- a/markham.html
+++ b/markham.html
@@ -17,6 +17,8 @@
       <div id="content">
        <div id="info-box-full">
         <img src="images/makharm.jpg">  
+        <img src="images/mrkm.jpg"> 
+        <img src="images/mrkm1.jpg"> 
           <p>The quality store for mens clothing</p> 
           <p>TRADING HOURS 09:00am Open until 18:00pm</p> 
           <h3>MARKAM</h3>
